// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-salarié > CCN HCR 1`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3412
salarié . rémunération . net . payé après impôt: 1897
salarié . rémunération . net . à payer avant impôt: 1983

Notifications affichées : salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > CCN batiment 1`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3766
salarié . rémunération . net . payé après impôt: 1846
salarié . rémunération . net . à payer avant impôt: 1931

Notifications affichées : salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > CCN batiment 2`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3749
salarié . rémunération . net . payé après impôt: 1848
salarié . rémunération . net . à payer avant impôt: 1933

Notifications affichées : salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > CCN batiment 3`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3799
salarié . rémunération . net . payé après impôt: 1862
salarié . rémunération . net . à payer avant impôt: 1949

Notifications affichées : salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > CCN compta 1`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3293
salarié . rémunération . net . payé après impôt: 1922
salarié . rémunération . net . à payer avant impôt: 2006

Notifications affichées : salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > CCN optique 1`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3483
salarié . rémunération . net . payé après impôt: 1943
salarié . rémunération . net . à payer avant impôt: 2058

Notifications affichées : salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > CCN spectacle vivant 1`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3759
salarié . rémunération . net . payé après impôt: 2039
salarié . rémunération . net . à payer avant impôt: 2155

Notifications affichées : salarié . contrat . CDD . information, salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > CCN sport 1`] = `
"salarié . contrat . salaire brut: 500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 906
salarié . rémunération . net . payé après impôt: 593
salarié . rémunération . net . à payer avant impôt: 593

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle, salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > CCN sport 2`] = `
"salarié . contrat . salaire brut: 1800
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1801
salarié . rémunération . net . payé après impôt: 1400
salarié . rémunération . net . à payer avant impôt: 1400

Notifications affichées : salarié . convention collective . contrôle décharge"
`;
